--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sean/composer-test",
+    "name": "guoxuivy/composer-test",
     "description": "test",
     "type": "library",
     "authors": [
